<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/stemlogo" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:padding="15dp"
            android:text="@string/about"
            android:textSize="15sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVisitCS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:text="@string/cs_link_label"
            app:icon="@drawable/ic_keyboard_arrow_right_black_24dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVisitStem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:text="@string/stem_link_label"
            app:icon="@drawable/ic_keyboard_arrow_right_black_24dp" />

    </LinearLayout>
</ScrollView>