<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/authentication_loader_display"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            android:background="@color/White"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/log_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/White"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:text="@string/moderation_authentication_message"
            android:textColor="@color/White"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/White"
                app:boxBackgroundColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_account_circle_white_24dp"
                    android:hint="@string/username"
                    android:maxLength="12"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/White"
                app:boxBackgroundColor="@color/colorAccent"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/White">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_lock_outline_white_24dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/White"
                    android:textColorHint="@color/White" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:text="@string/log_in"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/link_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/White"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>